--- a/NYSAT.Rmd
+++ b/NYSAT.Rmd
@@ -27,6 +27,12 @@ knitr::opts_chunk$set(echo = TRUE)
 library(here) 
 library(data.table)
 library(dplyr)
+#install.packages("corrplot", dependencies = TRUE)
+library(corrplot)
+#install.packages("ztable")
+library(ztable)
+#install.packages("moments")
+library(moments)
 ```
 
 ```{r, reading the data,include=FALSE}
@@ -70,7 +76,6 @@ df<-na.omit(df)
  #   
 ```
 
-
 #Explorotary data analysis
 
 ```{r, explore data}
@@ -98,3 +103,78 @@ df<-na.omit(df)
 
 ```  
 
+```{r, RAJ}
+dfr = all_joined%>%select(DBN,
+                      `SCHOOL NAME`,
+                      `Num of SAT Test Takers`,
+                      total_enrollment,
+                      `SAT Critical Reading Avg. Score`,
+                      `SAT Math Avg. Score`,
+                      `SAT Writing Avg. Score`,
+                      male_per,
+                      female_per,
+                      black_per,
+                      white_per,
+                      hispanic_per,
+                      asian_per,
+                      ell_percent,
+                      frl_percent) 
+
+dfr[] <- lapply(dfr, function(x) as.character(gsub("s", NA, x))) #replacing "s" with NA's
+
+#Char to Num
+dfr[] <- lapply(dfr, function(x) type.convert(as.character(x), as.is = TRUE))
+
+#Error check
+dfr$totgen = dfr$male_per + dfr$female_per
+dfr$totdiv = dfr$black_per + dfr$white_per + dfr$hispanic_per + dfr$asian_per
+
+#Simpson Diversity index
+dfr$div = 1 - (((dfr$black_per*(dfr$black_per-1))+(dfr$white_per*(dfr$white_per-1))+(dfr$hispanic_per*(dfr$hispanic_per-1))+(dfr$asian_per*(dfr$asian_per-1)))/9900)
+
+# Missing data check
+summary(dfr)
+apply(dfr,2,function(x) sum(is.na(x)))
+apply(dfr,2,function(x) sum(is.na(x))*100/nrow(dfr)) #percentage of NAs
+
+percentmiss = function(x){sum(is.na(x))/length(x)*100} #percent miss row
+missing = apply(dfr,1,percentmiss)
+table(missing)
+replace = subset(dfr, missing <= 5)
+missing1 = apply(replace,1,percentmiss)
+table(missing1)
+dont = subset(dfr, missing > 5)
+missing2 = apply(dont,1,percentmiss)
+table(missing2)
+apply(replace,2,percentmiss) #missing in column
+
+
+# Outlier check
+mah = mahalanobis(replace[,-c(1,2,16,17,18)],
+                    colMeans(replace[,-c(1,2,16,17,18)], na.rm=TRUE),
+                    cov(replace[,-c(1,2,16,17,18)], use ="pairwise.complete.obs")
+                    )
+mah
+cutoff = qchisq(1-.001,ncol(replace))
+print(cutoff)
+summary(mah < cutoff)
+noout = subset(replace, mah < cutoff) #Eliminate outliers
+str(noout)
+
+# Additivity check
+corrplot(cor(noout[,-c(1,2,16,17)]))
+cormat = cor(noout[,-c(1,2,16,17)]) #Correlation quantified
+z=ztable(cormat)
+z %>% makeHeatmap(mycolor = gradientColor(low="red",mid="white",high="blue")) %>% print(caption="Correlation Heatmap")
+
+
+#Normality check
+plot.new()
+par(mfrow=c(3, 3)); hist(noout$`SAT Critical Reading Avg. Score`, breaks=15, main = "SAT Reading", xlab=NA, ylab=NA); hist(noout$`SAT Math Avg. Score`, breaks=15, main = "SAT Math", xlab=NA, ylab=NA); hist(noout$`SAT Writing Avg. Score`, breaks=15, main = "SAT Writing", xlab=NA, ylab=NA); hist(noout$ell_percent, breaks=15, main = "ELL", xlab=NA, ylab=NA); hist(noout$frl_percent, breaks=15, main = "FRL", xlab=NA, ylab=NA); hist(noout$female_per, breaks=15, main = "Female %", xlab=NA, ylab=NA); hist(noout$white_per, breaks=15, main = "White %", xlab=NA, ylab=NA); hist(noout$black_per, breaks=15, main = "Black %", xlab=NA, ylab=NA); hist(noout$asian_per, breaks=15, main = "Asian %", xlab=NA, ylab=NA)
+
+hist(noout$div, breaks=25, main = "Diversity", xlab=NA, ylab=NA)
+
+apply(noout[,-c(1,2,16,17)], 2, skewness, na.rm =TRUE)
+apply(noout[,-c(1,2,16,17)], 2, kurtosis, na.rm =TRUE)
+
+```
