--- a/NYSAT.Rmd
+++ b/NYSAT.Rmd
@@ -3,8 +3,10 @@ title: "NYSAT"
 author: "EKLAR"
 date: 'null'
 output:
-  word_document: default
+  html_document:
+    df_print: paged
   pdf_document: default
+  word_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -37,6 +39,7 @@ library(corrplot)
 library(ztable)
 #install.packages("moments")
 library(moments)
+options(ztable.type = "html")
 ```
 
 ```{r, reading the data,include=FALSE}
@@ -175,9 +178,9 @@ dfr$totdiv = dfr$black_per + dfr$white_per + dfr$hispanic_per + dfr$asian_per
 dfr$div = 1 - (((dfr$black_per*(dfr$black_per-1))+(dfr$white_per*(dfr$white_per-1))+(dfr$hispanic_per*(dfr$hispanic_per-1))+(dfr$asian_per*(dfr$asian_per-1)))/9900)
 
 # Missing data check
-summary(dfr)
-apply(dfr,2,function(x) sum(is.na(x)))
-apply(dfr,2,function(x) sum(is.na(x))*100/nrow(dfr)) #percentage of NAs
+#summary(dfr)
+#apply(dfr,2,function(x) sum(is.na(x)))
+#apply(dfr,2,function(x) sum(is.na(x))*100/nrow(dfr)) #percentage of NAs
 
 percentmiss = function(x){sum(is.na(x))/length(x)*100} #percent miss row
 missing = apply(dfr,1,percentmiss)
@@ -188,7 +191,7 @@ table(missing1)
 dont = subset(dfr, missing > 5)
 missing2 = apply(dont,1,percentmiss)
 table(missing2)
-apply(replace,2,percentmiss) #missing in column
+#apply(replace,2,percentmiss) #missing in column
 
 
 # Outlier check
@@ -196,27 +199,38 @@ mah = mahalanobis(replace[,-c(1,2,16,17,18)],
                     colMeans(replace[,-c(1,2,16,17,18)], na.rm=TRUE),
                     cov(replace[,-c(1,2,16,17,18)], use ="pairwise.complete.obs")
                     )
-mah
+#mah
 cutoff = qchisq(1-.001,ncol(replace))
-print(cutoff)
+#print(cutoff)
 summary(mah < cutoff)
 noout = subset(replace, mah < cutoff) #Eliminate outliers
-str(noout)
-
+#str(noout)
+```
+# Correlation
+```{r results='asis'}
 # Additivity check
 corrplot(cor(noout[,-c(1,2,16,17)]))
 cormat = cor(noout[,-c(1,2,16,17)]) #Correlation quantified
-z=ztable(cormat)
-z %>% makeHeatmap(mycolor = gradientColor(low="red",mid="white",high="blue")) %>% print(caption="Correlation Heatmap")
 
+cormat %>%
+  as.data.frame() %>%
+  ztable() %>% 
+  makeHeatmap(mycolor = gradientColor(low="red",mid="white",high="blue")) %>%
+  print(caption="Correlation Heatmap")
+```
 
+```{r, Norm}
 #Normality check
 plot.new()
 par(mfrow=c(3, 3)); hist(noout$`SAT Critical Reading Avg. Score`, breaks=15, main = "SAT Reading", xlab=NA, ylab=NA); hist(noout$`SAT Math Avg. Score`, breaks=15, main = "SAT Math", xlab=NA, ylab=NA); hist(noout$`SAT Writing Avg. Score`, breaks=15, main = "SAT Writing", xlab=NA, ylab=NA); hist(noout$ell_percent, breaks=15, main = "ELL", xlab=NA, ylab=NA); hist(noout$frl_percent, breaks=15, main = "FRL", xlab=NA, ylab=NA); hist(noout$female_per, breaks=15, main = "Female %", xlab=NA, ylab=NA); hist(noout$white_per, breaks=15, main = "White %", xlab=NA, ylab=NA); hist(noout$black_per, breaks=15, main = "Black %", xlab=NA, ylab=NA); hist(noout$asian_per, breaks=15, main = "Asian %", xlab=NA, ylab=NA)
 
+#apply(noout[,-c(1,2,16,17)], 2, skewness, na.rm =TRUE)
+#apply(noout[,-c(1,2,16,17)], 2, kurtosis, na.rm =TRUE)
+
 hist(noout$div, breaks=25, main = "Diversity", xlab=NA, ylab=NA)
 
-apply(noout[,-c(1,2,16,17)], 2, skewness, na.rm =TRUE)
-apply(noout[,-c(1,2,16,17)], 2, kurtosis, na.rm =TRUE)
+par(mfrow=c(2, 2)); plot(noout$white_per, noout$asian_per); plot(noout$white_per, noout$black_per); plot(noout$hispanic_per, noout$black_per); plot(noout$hispanic_per, noout$asian_per)
+
+plot(noout$white_per, noout$`SAT Writing Avg. Score`)
 
 ```
