added code to save plots
created a new folder to save plots and
added code to save plots

--- a/NYSAT.Rmd
+++ b/NYSAT.Rmd
@@ -166,9 +166,9 @@ pl_writing<-ggplot(data = df)+
   geom_point(mapping = aes(x =`Num of SAT Test Takers` ,y = `SAT Writing Avg. Score`),
              color="orange",position = "jitter")
 
-ggarrange(pl_math,pl_reading,pl_writing)
+scores_sattakers<-ggarrange(pl_math,pl_reading,pl_writing)
 
-
+ggsave(filename = file.path(here("plots","scoresandtakers.png")))
 ```
 It looks like there is a positve linear association between enrollment and SAT reading scores
 
@@ -251,11 +251,13 @@ hist(poverty_high$`SAT Math Avg. Score`)
 df_poverty<-df_poverty%>%
   filter(poverty %in% c("mid to high poverty","mid low to low poverty"))
   
-ggplot(data = df_poverty,aes(x = frl_percent,y = `SAT Math Avg. Score`))+
+povertyplot<-ggplot(data = df_poverty,aes(x = frl_percent,y = `SAT Math Avg. Score`))+
   geom_point(aes(color=poverty))+
   xlab("Percentage of students with free or reduced lunches")+
   ylab("Average SAT math score")+
   ggtitle("understanding relationship between poverty and SAT performance")
+
+ggsave(filename = file.path(here("plots","povertyplot.png")))
 
 t.test(`SAT Math Avg. Score` ~ poverty, data = df_poverty, var.equal = FALSE)
 
