--- a/NYSAT.Rmd
+++ b/NYSAT.Rmd
@@ -362,7 +362,7 @@ TEregA = lm(df$`SAT Math Avg. Score` ~ df$total_enrollment, data = df)
 abline(TEregA,col="red")
 distA = table(df$total_enrollment) # making a frequency table to see if its normal
 barplot(distA)
-hist(distA, breaks = 10)
+hist(distA, breaks = 10) + cleanup
 skewness(df$total_enrollment) # 2.756 since its greater than 1 therefore highly skewed
 kurtosis(df$total_enrollment) # 7.43 High Kurtosis means the tails are longer and fatter and central peak is higher and sharper
 #B Male Percent Scatter Plot  + Bar Plot + Skewness + Kutosis
@@ -371,7 +371,7 @@ TEregB = lm(df$`SAT Math Avg. Score` ~ df$male_per, data = df)
 abline(TEregB,col="red")
 distB = table(df$male_per) # making a frequency table to see if its normal
 barplot(distB) 
-hist(distB, breaks = 10)
+hist(distB, breaks = 10) + cleanup
 skewness(df$male_per) # 0.1498 Normal skewness
 kurtosis(df$male_per) # 3.58 High Kurtosis means the tails are longer and fatter and central peak is higher and sharper
 #C Female Percent Scatter Plot + Bar Plot + Skewness + Kutosis
@@ -380,7 +380,7 @@ TEregC = lm(df$`SAT Math Avg. Score` ~ df$female_per, data = df)
 abline(TEregC,col="red")
 distC = table(df$female_per) # making a frequency table to see if its normal
 barplot(distC) 
-hist(distC, breaks = 10)
+hist(distC, breaks = 10)+ cleanup
 skewness(df$female_per) # -0.1499 Normal skewness
 kurtosis(df$female_per) # 3.58 Normal skewness
 #D Black Percent Scatter Plot + Bar Plot + Skewness + Kutosis
@@ -389,7 +389,7 @@ TEregD = lm(df$`SAT Math Avg. Score` ~ df$black_per, data = df)
 abline(TEregD,col="red")
 distD = table(df$black_per) # making a frequency table to see if its normal
 barplot(distD) 
-hist(distD, breaks = 10)
+hist(distD, breaks = 10)+ cleanup
 skewness(df$black_per) # 0.6190 Normal skewness
 kurtosis(df$black_per) # -0.7412 Normal skewness
 #E White Percent Scatter Plot + Bar Plot + Skewness + Kutosis
@@ -398,7 +398,7 @@ TEregE = lm(df$`SAT Math Avg. Score` ~ df$white_per, data = df)
 abline(TEregE,col="red")
 distE = table(df$white_per) # making a frequency table to see if its normal
 barplot(distE) 
-hist(distE, breaks = 10)
+hist(distE, breaks = 10)+ cleanup
 skewness(df$white_per) # 2.64 Normal skewness
 kurtosis(df$white_per) # 7.034 Highly Kutosis
 #F Hispanic Percent Scatter Plot + Bar Plot + Skewness + Kutosis
@@ -407,7 +407,7 @@ TEregF = lm(df$`SAT Math Avg. Score` ~ df$hispanic_per, data = df)
 abline(TEregF,col="red")
 distF = table(df$hispanic_per) # making a frequency table to see if its normal
 barplot(distF) 
-hist(distF, breaks = 10)
+hist(distF, breaks = 10)+ cleanup
 skewness(df$hispanic_per) # 0.1315 Normal skewness
 kurtosis(df$hispanic_per) # -1.03371 Normal kurtosis
  #G Asian Percent Scatter Plot + Bar Plot + Skewness + Kutosis
@@ -416,7 +416,7 @@ TEregG = lm(df$`SAT Math Avg. Score` ~ df$asian_per, data = df)
 abline(TEregG,col="red")
 distG = table(df$asian_per) # making a frequency table to see if its normal
 barplot(distG) 
-hist(distG, breaks = 10)
+hist(distG, breaks = 10)+ cleanup
 skewness(df$asian_per) # 2.47 Normal skewness
 kurtosis(df$asian_per) # 6.57 Abnormal Kutosis
 #H ELL Percent Scatter Plot + Bar Plot + Skewness + Kutosis
@@ -425,7 +425,7 @@ TEregH = lm(df$`SAT Math Avg. Score` ~ df$ell_percent, data = df)
 abline(TEregH,col="red")
 distH = table(df$ell_percent) # making a frequency table to see if its normal
 barplot(distH) 
-hist(distH, breaks = 10)
+hist(distH, breaks = 10)+ cleanup
 skewness(df$ell_percent) # 2.95 Normal skewness
 kurtosis(df$ell_percent) # 8.34 Abnormal Kutosis
 #I FRL Percent  Scatter Plot + Bar Plot + Skewness + Kutosis
@@ -434,7 +434,7 @@ TEregI = lm(df$`SAT Math Avg. Score` ~ df$frl_percent, data = df)
 abline(TEregI,col="red")
 distI = table(df$frl_percent) # making a frequency table to see if its normal
 barplot(distI) 
-hist(distI, breaks = 10)
+hist(distI, breaks = 10)+ cleanup
 skewness(df$frl_percent) # -1.00 Normal skewness
 kurtosis(df$frl_percent) # 0.88 Normal Kutosis
 
@@ -442,39 +442,37 @@ kurtosis(df$frl_percent) # 0.88 Normal Kutosis
  #5: Check for missing values. DId not see any mising values
 summary(df)
 #6 Checking for outliers
-MLR = cbind(total_enrollment, male_per, female_per, black_per, white_per, hispanic_per, asian_per, ell_percent, frl_percent)
-mahal = mahalanobis(MLR,
-                    colMeans(MLR, na.rm = TRUE),
-                    cov(MLR, use = "pairwise.complete.obs"))
+MLR4 = cbind(ell_percent, frl_percent, white_per, asian_per, black_per)
+mahal = mahalanobis(MLR4,
+                    colMeans(MLR4, na.rm = TRUE),
+                    cov(MLR4, use = "pairwise.complete.obs"))
 mahal
-cutoff = qchisq(1-0.001,ncol(MLR)) # detrming the cutoff point
+cutoff = qchisq(1-0.001,ncol(MLR4)) # detrming the cutoff point=20.515
 print(cutoff)
-summary(mahal < cutoff) # Determining the number of outliers. 16 outliers. WE are not taking out outliers due to two #reasons:
+summary(mahal < cutoff) # Determining the number of outliers. 12 outliers. WE are not taking out outliers due to two #reasons:
 #1) Our data is an average score of all schools so therefore, we can not identify them on a unique basis
 #2) We need to be concerned about outliers that are possible errors. Here scoring a perfect 800 is possible and the max SAT math score in our data is 735.
-noout = subset(MLR, mahal < cutoff) # Values which are not outliers
-nooutd = as.data.frame(t(noout))
-str(noout)
+
 # 7 Multicolinearity check./ As per Raj's analysis all the values are less than 0.90
 
 #MLR
 
-olsreg2Math = lm(`SAT Math Avg. Score` ~ MLR)
-summary(olsreg2Math) # Only ELL & FRL are significantly different than 0 so include them in the model. The other independent variables are not significatly different from 0 therefore holding all things constant these independant variables do not impact the dependant variable 
+olsreg2Math8 = lm(`SAT Math Avg. Score` ~ MLR4)
+summary(olsreg2Math8)
 #8 Linearity check. 
-plot(olsreg2Math,2) # The plot shows that the standardized errors are normally distributed. 
+plot(olsreg2Math8,2) # The plot shows that the standardized errors are normally distributed. 
 
-plot(olsreg2Math,1) # Plot to check for homogenity and homoscedasticity. To me it seems homogenous spread above the line is almost equal to spread below the line but I dont think its homoscedastic as its not uniform along the x axis. Katge Valentine Prof mentioned use bootstraping, I have no clue what that is. 
+plot(olsreg2Math8,1) # Plot to check for homogenity and homoscedasticity. To me it seems homogenous spread above the line is almost equal to spread below the line but I dont think its homoscedastic as its not uniform along the x axis. Kate Valentine Prof mentioned use bootstraping, I have no clue what that is. 
 
 
 
-anova(olsreg2Math)# Since P value is less than 0.05 therefore we have a joint  significant result
+anova(olsreg2Math8)# Since P value is less than 0.05 therefore we have a joint  significant result
 
-confint(olsreg2Math, level = 0.95) # The ones that dont contain the 0 in the intervaql are significant which is confirmed by our other results
-yhat = fitted(olsreg2Math) # Predicted values for the dependent variable.
+confint(olsreg2Math8, level = 0.95) # The ones that dont contain the 0 in the intervaql are significant which is confirmed by our other results
+yhat = fitted(olsreg2Math8) # Predicted values for the dependent variable.
 summary(yhat)
 # Regression Residuals
-ehat = resid(olsreg2Math)
+ehat = resid(olsreg2Math8)
 summary(ehat) # SUm of residuals on average is 0
 
 
